# perlin-shadows

./: .clang-format  CMakeLists.txt  Makefile  README.md  TODO.md  constants.h  final.cpp  geography.cpp  geography.h  grid.cpp  grid.h  math.cpp  math.h  vec.cpp  vec.h
src/: camera.cpp  camera.h  constants.h  final.cpp  fragShader.glsl  geography.cpp  geography.h  grid.cpp  grid.h  math.h  noise_math.h  phong.frag  phong.vert  point_light.cpp  point_light.h  random.cpp  random.h  renderable.cpp  renderable.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shadow.frag  shadow.geom  shadow.vert  vec.cpp  vec.h  vertShader.glsl  vertexShaders.glsl
